# VeilBox

./: .gitignore  LICENSE  README.md  SECURITY.md  app.go  config.go  go.mod  go.sum  index.html  logs.go  main.go  package-lock.json  package.json  proxy_windows.go  runner.go  temp.txt  templates.go  tray_stub.go  tray_windows.go  vite.config.ts  vless.go  wails.json
embed_templates/: vless_reality_grpc_proxy.json  vless_reality_grpc_tun.json
examples/: sample-profiles.json
frontend/: index.html
frontend/src/: App.css  App.tsx  style.css
frontend/wailsjs/go/: models.ts
public/: placeholder.txt
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  config_builder.rs  elevation_manager.rs  error.rs  latency_manager.rs  lib.rs  log_manager.rs  main.rs  models.rs  network_interface_manager.rs  profile_geo.rs  profile_store.rs  proxy_manager_windows.rs  settings_store.rs  state.rs  subscription_import.rs  subscription_store.rs  tray_manager.rs  tun_route_manager.rs  vless_parser.rs  xray_manager.rs
src/components/: AppShell.tsx  Button.tsx  CountryFlag.tsx  EmptyState.tsx  Field.tsx  Modal.tsx  Panel.tsx  Sidebar.tsx  StatusBadge.tsx  ToastViewport.tsx  Toggle.tsx
src/components/ui/: hero-shutter-text.tsx
src/features/connection/: ConnectionHero.tsx
src/lib/: country.ts  format.ts  i18n.ts  tauri.ts  theme.ts
src/pages/: AboutPage.tsx  DashboardPage.tsx  LogsPage.tsx  ProfilesPage.tsx  SettingsPage.tsx
src/store/: useAppStore.ts
src/types/: index.ts
(+7 files in other folders)
