[package]
name = "vailbox"
version = "2.1.0"
description = "Windows VLESS desktop client built with Tauri"
authors = ["Codex"]
edition = "2021"

[lib]
name = "vailbox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.38", features = ["serde"] }
percent-encoding = "2.3.1"
portpicker = "0.1.1"
regex = "1.11.1"
reqwest = { version = "0.12.9", default-features = false, features = ["json", "rustls-tls", "gzip", "brotli", "deflate"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tauri = { version = "2.1.1", features = ["tray-icon"] }
tauri-plugin-autostart = "2.0.1"
tauri-plugin-single-instance = "2.0.1"
once_cell = "1.20.2"
tokio = { version = "1.41.1", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
urlencoding = "2.1.3"
url = "2.5.4"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
winapi = { version = "0.3.9", features = ["wininet"] }
winreg = "0.52.0"
